# rust_plugin

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rust_plugin_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: rust_plugin.podspec
ios/Classes/: rust_plugin.c
lib/: rust_plugin.dart  rust_plugin_bindings_generated.dart
src/: CMakeLists.txt  Cargo.toml  rust_plugin.c  rust_plugin.h
src/src/: lib.rs
